this time really fixing spacing

--- a/style/desktop.css
+++ b/style/desktop.css
@@ -93,7 +93,7 @@ td {
 
 .cmucoursetitle {
     padding: 0;
-    margin: 8px;
+    margin: 0;
     line-height: 1;
     font-weight: 350;
     color: rgb(196, 18, 48);
